style.css
body 
{ margin: 100px; 
color:#777; 
background: #777;
width: 960px;
font-size: 18px;

text-align: center;
font-family: Arial, Helvetica, sans-serif;

}


nav{

margin:10px;


}
 nav ul
{ list-style: none;
    background:#ebebeb;
    text-align: center;
    padding: 0;
   
    
   
    
 }

nav li
{ display: inline-block;
    color: #777;
   
    margin: 20px;
    text-align: center;
    


}

h1
    {Text-align: center;
        background:#ebebeb;
        color: #777;
        
    
        margin:10px;

    }

section
    {
        background:#ebebeb;
float: left;
width: 495px;
height:210px;

margin:2px;
    }

article
    { background:#777;
        color: #ebebeb;
        margin: 20px;
        height:150px;
    }
    
    h2

    {text-align: center; 
        background:#ebebeb;
        margin:20px;
        color:#777;
        height:35px;

    }

    p
    {background:#ebebeb;
        color: #777;
        margin:20px;
        height:35px;
       


    }

aside
{background:#ebebeb;
    width: 425px;
    height:210px;
    float:right;
    margin:2px;
    

}

footer
{ clear:both;
    background:#ebebeb;
    text-align: center;
    padding: 0;
    float:left;
    width: 100%;
    height: 100px;
  
    margin: 2px;


}

